# watcher-rs

./: Cargo.toml  README.md
src/: event.rs  lib.rs  watcher.rs
