[package]
name = "watcher"
version = "0.0.1"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/andelf/watcher-rs"
homepage = "https://github.com/andelf/watcher-rs"
documentation = "https://docs.rs/watcher/"
license = "MIT OR Apache-2.0"
keywords = ["watcher", "file", "notify", "event"]
# categories = []
description = "File watcher"
readme = "README.md"

[dependencies]
notify = "4.0"
walkdir = "2.3"
uuid = "0.8"
glob = "0.3"
gitignore = "1.0"
lazy_static = "1.4"
serde_derive = "1.0"
